apps/searxng/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: apps
spec:
  selector:
    app: searxng
  ports:
    - name: http
      port: 8080
      targetPort: http
